--- a/css/jquery.datetimepicker.css
+++ b/css/jquery.datetimepicker.css
@@ -376,7 +376,7 @@
 }
 
 .xdsoft_datetimepicker .xdsoft_calendar td.xdsoft_today {
-	color: #33aaff;
+	color: #822D6E;
 }
 
 .xdsoft_datetimepicker .xdsoft_calendar td.xdsoft_highlighted_default {
