--- a/templates/Login.html
+++ b/templates/Login.html
@@ -4,9 +4,9 @@
 		<meta charset="utf-8">
 		<title>Lerhmittelverwaltung</title>
 		<meta name="description" content="Lerhmittelverwaltung">
-		<link rel="stylesheet" href="css/normalize.css">
-		<link rel="stylesheet" href="css/main.css">
-		<script src="js/jquery.js"></script>
+		<link rel="stylesheet" href="../css/normalize.css">
+		<link rel="stylesheet" href="../css/main.css">
+		<script src="../js/jquery.js"></script>
 	</head>
 	<body>
 		<div class="login-area">
@@ -20,6 +20,6 @@
 				</form>
 			</div>
 		</div>
-		<script src="js/main.js"></script>
+		<script src="../js/main.js"></script>
 	</body>
 </html>
